opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
]
synopsis: "Dependency checker"
description: """
depcheck checks your projects for outdated and deprecated dependencies.
It currently only supports NPM but more systems are planned.
"""
license: "NONE"
tags: ["Dependency" "Dependencies" "npm"]
homepage: "https://github.com/asemio/depcheck"
dev-repo: "git://github.com/asemio/depcheck"
doc: "https://github.com/asemio/depcheck"
bug-reports: "https://github.com/asemio/depcheck/issues"
pin-depends: [
  [ "eio.0.13.0.custom" "git+https://github.com/ocaml-multicore/eio.git#464a5623b02fd7a073c86eb052777eec6951b41c" ]
  [ "eio_main.0.13.0.custom" "git+https://github.com/ocaml-multicore/eio.git#464a5623b02fd7a073c86eb052777eec6951b41c" ]
  [ "eio_posix.0.13.0.custom" "git+https://github.com/ocaml-multicore/eio.git#464a5623b02fd7a073c86eb052777eec6951b41c" ]
  [ "eio_linux.0.13.0.custom" "git+https://github.com/ocaml-multicore/eio.git#464a5623b02fd7a073c86eb052777eec6951b41c" ]
]
depends: [
  "ocaml" { >= "5.1.0" }
  "dune" { >= "1.9.0" }

  "core" { >= "v0.16.0" & < "v0.18.0" }
  "core_unix" { >= "v0.16.0" & < "v0.18.0" }
  "eio_main" { = "0.13.0.custom" }

  "yojson"
  "ppx_deriving_yojson" { >= "3.5.2" }
  "re"
  "uri-sexp"

  "ocamlformat" { = "0.25.1" & with-test } # Development
  "ocaml-lsp-server" { with-test } # Development
]
build: ["dune" "build" "-p" name "-j" jobs]
